--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -47,7 +47,7 @@
   {\normalfont \sffamily \bfseries \thechapter. \hspace{0.1cm} }
   {0pt}
   {\normalfont \sffamily \bfseries }
-\titlespacing*{\chapter}{0pt}{0pt}{18pt}
+\titlespacing*{\chapter}{0pt}{20pt}{15pt}
 
 %FORMAT De section
 \renewcommand*\thesection{\arabic{section}}
@@ -57,7 +57,7 @@
   {\normalfont \sffamily \hspace{1cm} \bfseries \thesection . }
   {0pt}
   {\normalfont \sffamily \bfseries }
-  
+
 
 %FORMAT De subsection
 \titleclass{\subsection}{straight}
@@ -175,7 +175,9 @@ Personal reflections on project experiences
 Pierre Thubé
 
 \chapter{Azarias Boutin}
-Azarias Boutin
+I am quite satisfied with the software developed. When the group started the project, I was knowing nothing about Qt and wanted to learn as much as possible about this amazing framework. I knew the basics of C++ and felt this would be enough to build a good software. I also knew the basics of GUI thanks to the lessons with java swing. I really felt that this project bring me a lot of knowledge. During the implementation of the software, the several improvement steps proved this point.\\
+However, I also feel like the project was not progressing fast enough. Maybe because of a lack of communication but also because of lack of knowledge from the other group member. Furthermore, since the group was only composed of two members, I felt like I was carried all the project from the beginning to the end.\\
+Overall I am satisfied with the result and the software developed. It was a rich experience, and I learned a lot about Qt. I also learned a lot about git and version management system.
 
 
 \end{document}
