--- a/docs/report/main.tex
+++ b/docs/report/main.tex
@@ -83,49 +83,23 @@
 \definecolor{listinggray}{gray}{0.9}
 \definecolor{lbcolor}{rgb}{0.9,0.9,0.9}
 \definecolor{darkgreen}{rgb}{0.0, 0.2, 0.13}
-\lstset{
-backgroundcolor=\color{lbcolor},
-    tabsize=4,    
-%   rulecolor=,
-    language=[GNU]C++,
-        basicstyle=\scriptsize,
-        upquote=true,
-        aboveskip={1.5\baselineskip},
-        columns=fixed,
-        showstringspaces=false,
-        extendedchars=false,
-        breaklines=true,
-        prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
-        frame=single,
-        numbers=left,
-        showtabs=false,
-        showspaces=false,
-        showstringspaces=false,
-        identifierstyle=\ttfamily,
-        keywordstyle=\color[rgb]{0,0,1},
-        commentstyle=\color[rgb]{0.026,0.112,0.095},
-        stringstyle=\color[rgb]{0.627,0.126,0.941},
-        numberstyle=\color[rgb]{0.205, 0.142, 0.73},
-%        \lstdefinestyle{C++}{language=C++,style=numbers}’.
-}
+
 \lstset{
     backgroundcolor=\color{lbcolor},
-    tabsize=4,
-  language=C++,
-  captionpos=b,
-  tabsize=3,
-  frame=lines,
-  numbers=left,
-  numberstyle=\tiny,
-  numbersep=5pt,
-  breaklines=true,
-  showstringspaces=false,
-	basicstyle=\footnotesize\ttfamily\bfseries\color{cyan!10!black},
-%  identifierstyle=\color{magenta},
-  keywordstyle=\color[rgb]{0,0,1},
-  commentstyle=\color{darkgreen},
-  stringstyle=\color{red}
-  }
+	language=C++,
+	captionpos=b,
+	tabsize=3,
+	frame=lines,
+	numbers=left,
+	numbersep=5pt,
+	breaklines=true,
+	showstringspaces=false,
+	basicstyle=\footnotesize\ttfamily\bfseries\color{black},
+	keywordstyle=\color[rgb]{0.1,0,1},
+	commentstyle=\color[rgb]{0.300,0.300,0.300},
+	stringstyle=\color[rgb]{0.627,0.126,0.100},
+	numberstyle=\color[rgb]{0.73, 0.142, 0.900}
+ }
   
 \input{keywords.tex}
   
